kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-web-app
  namespace: blue
spec:
  replicas: 3
  selector:
    matchLabels:
      app: sample-web-app
  template:
    metadata:
      labels:
        app: sample-web-app
    spec:
      containers:
      - name: sample-web-app
        image: kdockt/sample-web-app:latest # Replace with your Docker Hub image
        ports:
        - containerPort: 3000
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
