kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample-web-app-ingress
  namespace: blue
spec:
  rules:
  - host: sampleapp.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sample-web-app-service
            port:
              number: 80
